# Socket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: CMakeLists.txt  client  client.cpp  client.h
server/: CMakeLists.txt  mksock  server.cpp  server.h
